feat(sse): add connection limit per user and panel management
- Implement max connections per user in backend with CONNECTION_LIMIT_REACHED event
- Update frontend to handle connection limits and degraded mode
- Refactor user panel management to support multiple connections per user
- Modify Geode cache to track multiple connections per user